Removed ng-animate classes since animate is removed due to bug on iOS

--- a/web/sass/modules/_static-page.scss
+++ b/web/sass/modules/_static-page.scss
@@ -8,13 +8,6 @@
 .static-page {
   padding-bottom: 3em;
 
-  &--inner {
-    .ng-enter,
-    .ng-leave {
-      @include animation(fadeOut .5s ease 1 forwards);
-    }
-  }
-
   p {
     margin-bottom: 1em;
   }
